--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "nativewind": "^2.0.11",
     "react": "18.2.0",
-    "react-native": "0.73.4",
+    "react-native": "^0.73.4",
     "react-native-vector-icons": "^10.0.3"
   },
   "devDependencies": {
