--- a/.github/workflows/reactBuild.yml
+++ b/.github/workflows/reactBuild.yml
@@ -72,6 +72,8 @@ jobs:
         run: |
           cd android
           ./gradlew build
+      - name: Log Current Directory
+        run: pwd
       - name: Build Android JS Bundle
         run: |
           yarn run package-android
