--- a/.github/workflows/reactBuild.yml
+++ b/.github/workflows/reactBuild.yml
@@ -8,7 +8,7 @@ jobs:
     steps:
       - name: Show self-hosted machine infomation
         run: uname -a
-      - name: Cancel previous runs
+      - name: Cancel previous runss
         uses: styfle/cancel-workflow-action@0.9.1
       - name: Checkout repo from dev branch
         uses: actions/checkout@v3
