--- a/.github/workflows/reactBuild.yml
+++ b/.github/workflows/reactBuild.yml
@@ -2,46 +2,46 @@ on:
   push:
     branches: [ "dev" ]
 jobs:
-  ios-build:
-    name: iOS Dev Build
-    runs-on: self-hosted
-    steps:
-      - name: Show self-hosted machine infomation
-        run: uname -a
-      - name: Cancel previous runss
-        uses: styfle/cancel-workflow-action@0.9.1
-      - name: Checkout repo from dev branch
-        uses: actions/checkout@v3
-        with:
-          ref: dev
-      - name: Install npm dependency
-        run: yarn install
-      - name: Cache cocoapods
-        uses: actions/cache@v3
-        with:
-          path: /ios/Pods
-          key: ${{ runner.os }}-pods-${{ hashFiles('**/Podfile.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-pods-
-      - name: Install pod dependency
-        run: |
-          cd ios
-          bundle exec pod install
-      - name: Build iOS JS Bundle
-        run: |
-          yarn run package-ios
-      - name: Install bundler
-        run: |
-          cd ios
-          gem install bundler
-      - name: Install gem plugins
-        run: |
-          cd ios
-          bundle install
-      - name: Run fastlane
-        run: |
-          cd ios
-          bundle exec fastlane build_testflight
+  #ios-build:
+    #name: iOS Dev Build
+    #runs-on: self-hosted
+    #steps:
+      #- name: Show self-hosted machine infomation
+      #  run: uname -a
+      #- name: Cancel previous runss
+      #  uses: styfle/cancel-workflow-action@0.9.1
+      #- name: Checkout repo from dev branch
+      #  uses: actions/checkout@v3
+      #  with:
+      #    ref: dev
+      #- name: Install npm dependency
+      #  run: yarn install
+      #- name: Cache cocoapods
+      #  uses: actions/cache@v3
+      #  with:
+      #    path: /ios/Pods
+      #    key: ${{ runner.os }}-pods-${{ hashFiles('**/Podfile.lock') }}
+      #    restore-keys: |
+      #      ${{ runner.os }}-pods-
+      #- name: Install pod dependency
+      #  run: |
+      #    cd ios
+      #    bundle exec pod install
+      #- name: Build iOS JS Bundle
+      #  run: |
+      #    yarn run package-ios
+      #- name: Install bundler
+      #  run: |
+      #    cd ios
+      #    gem install bundler
+      #- name: Install gem plugins
+      #  run: |
+      #    cd ios
+      #    bundle install
+      #- name: Run fastlane
+      #  run: |
+      #    cd ios
+      #    bundle exec fastlane build_testflight
   android-build:
     name: Android Dev Build
     runs-on: self-hosted
