--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "package-android": "cd android && ./gradlew assembleRelease"
   },
   "dependencies": {
     "nativewind": "^2.0.11",
