--- a/.github/workflows/reactBuild.yml
+++ b/.github/workflows/reactBuild.yml
@@ -73,9 +73,10 @@ jobs:
         run: |
           cd /home/marcosmodesto/ambiente/react-native/apptailwind/android
           ./gradlew build
-      - name: Build Android JS Bundle
-        run: |
-          yarn run package-android
+      #  o gradlew build acima ja gera o apk nao precisa gradlew assembleRelease
+      #- name: Build Android JS Bundle
+      #  run: |
+      #    yarn run package-android
       # Adjust package.json the command (rm -rf ./pictures) according to your project's requirements.
       #"scripts": {
       #  "android": "react-native run-android",
