--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -41,3 +41,8 @@ newArchEnabled=false
 hermesEnabled=true
 
 org.gradle.java.home=/usr/lib/jvm/java-17-openjdk-amd64
+
+MYAPP_UPLOAD_STORE_FILE=my-upload-key.keystore
+MYAPP_UPLOAD_KEY_ALIAS=my-key-alias
+MYAPP_UPLOAD_STORE_PASSWORD=ReactNative@2024@
+MYAPP_UPLOAD_KEY_PASSWORD=ReactNative@2024@
