--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "eslint .",
     "start": "react-native start",
     "test": "jest",
-    "package-android": "cd /home/marcosmodesto/ambiente/react-native/apptailwind/android && ./gradlew assembleRelease"
+    "package-android": "cd /home/marcosmodesto/ambiente/react-native/apptailwind/android && ./gradlew bundleRelease"
   },
   "dependencies": {
     "appcenter": "5.0.1",
