teste work dir 2

--- a/.github/workflows/reactBuild.yml
+++ b/.github/workflows/reactBuild.yml
@@ -71,11 +71,12 @@ jobs:
         uses: gradle/gradle-build-action@v3.1.0
       - name: Execute Gradle build
         run: |
-          cd /home/marcosmodesto/ambiente/react-native/apptailwind/android
+          cd /home/marcosmodesto/ambiente/react-native/apptailwind/actions-runner/_work/apptailwind/apptailwind/android
+          dos2unix gradlew
           ./gradlew build
       - name: Build Android JS Bundle
         run: |
-          cd /home/marcosmodesto/ambiente/react-native/apptailwind/android
+          cd /home/marcosmodesto/ambiente/react-native/apptailwind/actions-runner/_work/apptailwind/apptailwind/android
           ./gradlew bundleRelease
       #    yarn run package-android
       # Adjust package.json the command (rm -rf ./pictures) according to your project's requirements.
@@ -91,13 +92,13 @@ jobs:
       # run: yarn run delete-pics
       - name: Install bundler
         run: |
-          cd /home/marcosmodesto/ambiente/react-native/apptailwind/android
+          cd /home/marcosmodesto/ambiente/react-native/apptailwind/actions-runner/_work/apptailwind/apptailwind/android
           gem install bundler
       - name: Install gem plugins
         run: |
-          cd /home/marcosmodesto/ambiente/react-native/apptailwind/android
+          cd /home/marcosmodesto/ambiente/react-native/apptailwind/actions-runner/_work/apptailwind/apptailwind/android
           bundle install
       - name: Run fastlane
         run: |
-          cd /home/marcosmodesto/ambiente/react-native/apptailwind/android
+          cd /home/marcosmodesto/ambiente/react-native/apptailwind/actions-runner/_work/apptailwind/apptailwind/android
           bundle exec fastlane build
