--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "^0.73.4",
-    "react-native-vector-icons": "9.2.0"
+    "react-native-vector-icons": "^10.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
