run on ubuntu latest

--- a/.github/workflows/reactBuild.yml
+++ b/.github/workflows/reactBuild.yml
@@ -45,7 +45,8 @@ jobs:
       #    bundle exec fastlane build_testflight
   android-build:
     name: Android Dev Build
-    runs-on: self-hosted
+    #runs-on: self-hosted
+    runs-on: ubuntu-latest
     steps:
       - name: Show self-hosted machine infomation
         run: uname -a
