--- a/.github/workflows/reactBuild.yml
+++ b/.github/workflows/reactBuild.yml
@@ -70,6 +70,10 @@ jobs:
 
       - name: Setup Android SDK
         uses: android-actions/setup-android@v3.1.0
+        with:
+          cmdline-tools-version: 9.0
+          accept-android-sdk-licenses: true
+          log-accepted-android-sdk-licenses: true
       - uses: actions/cache@v4.0.0
         with:
           path: |
